--- a/index.html
+++ b/index.html
@@ -2,68 +2,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rumjog Enterprises</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #0e0e0e;
-            color: #f4f4f4;
-        }
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1.5rem 2rem;
-            background-color: #1a1a1a;
-        }
-        header img {
-            height: 60px;
-        }
-        main {
-            padding: 4rem 2rem;
-            text-align: center;
-        }
-        h1 {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            color: #f7931a;
-        }
-        p {
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-        }
-        .cta {
-            background-color: #f7931a;
-            color: #0e0e0e;
-            padding: 0.75rem 1.5rem;
-            border: none;
-            border-radius: 6px;
-            font-size: 1rem;
-            cursor: pointer;
-        }
-        footer {
-            text-align: center;
-            padding: 2rem;
-            background-color: #1a1a1a;
-            font-size: 0.9rem;
-            color: #ccc;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Homepage</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #111;
+      color: #fff;
+      text-align: center;
+    }
+
+    header {
+      background-color: #111;
+      padding: 20px;
+    }
+
+    header img {
+      max-width: 300px;
+      height: auto;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <img src="logo-lightback-png.jpeg" alt="Rumjog Logo">
-    </header>
-    <main>
-        <h1>Navigating Emerging Tech</h1>
-        <p>We help you adapt to rapid change with cutting-edge solutions in AI, Bitcoin integration, and digital transformation strategy.</p>
-        <button class="cta">Contact Us</button>
-    </main>
-    <footer>
-        &copy; 2025 Rumjog Enterprises. All rights reserved.
-    </footer>
+  <header>
+    <img src="logo-darkback-png.png" alt="RUMJOG Logo" />
+  </header>
+
+  <h1>Navigating Emerging Tech</h1>
 </body>
 </html>
